<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_primary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <ImageView
            android:id="@+id/LogoImgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="35dp"
            android:text="@string/signup_heading"
            android:textColor="@color/black"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/usersNameET"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/name_hint"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/usersSurnameET"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/surname_hint"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/usersEmailET"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/currentWeightET"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/weight_hint_met"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/currentHeightET"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/height_hint_met"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/goalWeightET"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/goal_weight_hint_met"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/calorieGoalNumET"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/goal_calories_hint"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/buttons"
            android:text="@string/signup_button" />

    </LinearLayout>

</ScrollView>
