<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />

    <ImageView
        android:id="@+id/LogoImgView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:contentDescription="l"
        tools:srcCompat="@drawable/logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

    <EditText
        android:id="@+id/emailET"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordET"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/loginButton"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="139dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/buttons"
        android:text="@string/login_button"
        android:textSize="16dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="83dp" />

    <TextView
        android:id="@+id/noAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_account_signup" />

    <Button
        android:id="@+id/signupButton"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:text="@string/signup_button" />


</LinearLayout>