<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_primary"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".SettingsActivity">

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <ImageView
            android:id="@+id/LogoImgView_settings"
            android:layout_width="253dp"
            android:layout_height="168dp"
            android:layout_gravity="center"
            android:contentDescription="logo"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/usersNameLabelTV_settings"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:ems="10"
                android:text="@string/name_label"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/usersNameET_settings"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name_placeholder"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/usersSurnameLabelTV_settings"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/surname_label"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/usersSurnameET_settings"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/surname_placeholder"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/usersEmailLabelTV_settings"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/email_label"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/userEmailET_settings"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/email_placeholder"
                android:inputType="none" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/currentHeightTV_settings"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:ems="10"
                android:text="@string/height_met"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/currentHeightNumET_settings"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/goalWeightTV_settings"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:ems="10"
                android:text="@string/goal_weight_met"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/goalWeightNumET_settings"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/calorieGoalTV_settings"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:ems="10"
                android:text="@string/goal_calories"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/calorieGoalNumET_settings"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/useMetricTV_settings"
                android:layout_width="308dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/measurement_system"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <Switch
                android:id="@+id/metricSwitch_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:showText="true"
                android:switchMinWidth="75dp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
                android:textOff="@string/imperial_switch"
                android:textOn="@string/metric_switch"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/confirmBtn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/buttons"
            android:text="@string/confirm_settings" />

    </LinearLayout>

</ScrollView>



