<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_primary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CaptureMeals"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/LogoImgView_meal"
            android:layout_width="320dp"
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:contentDescription="logo"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:background="@color/background_primary"
            android:backgroundTint="@color/background_primary"
            app:cardCornerRadius="5dp">
            <ImageView
                android:id="@+id/mealImage_meal"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:background="@color/buttons" />
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/captureImageBtn_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/buttons"
            android:text="@string/capture_image"
            android:textColor="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/mealBreakdownTV_meal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/meal_info"
            android:textSize="20dp">
        </TextView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/mealName_meal"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/meal_name"
            android:inputType="textPersonName" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/caloriesET_meal"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/meal_cal"
            android:inputType="numberDecimal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/confirmMealBtn_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/buttons"
            android:text="@string/confirm"
            android:textColor="@color/black" />
    </LinearLayout>


</ScrollView>