<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_primary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Log">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/simplyHealthTV_log"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/simply_health"
                android:textColor="@color/green"
                android:textSize="40dp" />

            <ImageButton
                android:id="@+id/settingsImgBtn_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/background_primary"
                android:src="@drawable/settings" />
        </LinearLayout>


        <CalendarView
            android:id="@+id/historyCalenderView_log"
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:background="@color/background_primary"
            android:backgroundTint="@color/background_primary"
            android:focusedMonthDateColor="@color/design_default_color_on_secondary"
            android:foregroundTint="@color/background_primary"
            android:maxDate="19/11/2077"
            android:minDate="01/01/2020" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/weightOnDayTV_log"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/history_weight_met"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/weightNumTV_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight_placeholder"
                android:textColor="@color/black"
                android:textSize="24dp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/weightGoalTV_log"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goal_weight_met"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/weightGoalNumTV_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight_placeholder"
                android:textColor="@color/black"
                android:textSize="24dp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/calOnDayTV_log"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calories_consumed"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/calNumTV_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cal_placeholder"
                android:textColor="@color/black"
                android:textSize="24dp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/calGoalTV_log"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goal_calories"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/calGoalNumTV_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cal_placeholder"
                android:textColor="@color/black"
                android:textSize="24dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/calChart_log"
                android:layout_width="320dp"
                android:layout_height="250dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center"
                />



        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/weightChart_log"
                android:layout_width="330dp"
                android:layout_height="250dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center"
                />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/recordDailyWeightButton_log"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/buttons"
                android:gravity="center"
                android:text="@string/record_weight_met" />

            <Space
                android:layout_width="10dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/captureMealButton_log"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/buttons"
                android:gravity="center"
                android:text="@string/capture_meal" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>